...
            return "Save"
        case .downloading:
            return "Saving... \(Int(saveProgress * 100))%"
        case .saved:
            return "Saved"
        case .error:
            return "Retry"
        }
    }
    
    private var saveButtonTintColor: Color {
        switch saveState {
        case .notSaved:
...
